[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Ubuntu-L.tres" type="DynamicFont" id=2]

[node name="Control" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="."]
anchor_left = 0.024
anchor_top = 0.038
anchor_right = 0.978
anchor_bottom = 0.962
margin_left = 0.424
margin_top = 0.199999
margin_right = -0.472046
margin_bottom = -0.200073
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="VBoxContainer" parent="Options"]
margin_right = 485.0
margin_bottom = 553.0
size_flags_horizontal = 3
alignment = 1

[node name="Graphics" type="Label" parent="Options/Graphics"]
margin_top = 223.0
margin_right = 485.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 2 )
text = "Graphics"
align = 1
valign = 1

[node name="Fullscreen" type="CheckButton" parent="Options/Graphics"]
margin_top = 246.0
margin_right = 485.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"

[node name="VSync" type="CheckButton" parent="Options/Graphics"]
margin_top = 290.0
margin_right = 485.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 2 )
text = "VSync"

[node name="Audio" type="VBoxContainer" parent="Options"]
margin_left = 489.0
margin_right = 975.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Label" parent="Options/Audio"]
margin_top = 202.0
margin_right = 486.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 2 )
text = "Audio Settings"
align = 1
valign = 1

[node name="Master_label" type="Label" parent="Options/Audio"]
margin_top = 225.0
margin_right = 486.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = "Master"
align = 1
valign = 1

[node name="Master" type="HBoxContainer" parent="Options/Audio"]
margin_top = 248.0
margin_right = 486.0
margin_bottom = 264.0

[node name="Master_slider" type="HSlider" parent="Options/Audio/Master"]
margin_right = 486.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 20.0

[node name="Master_on" type="CheckButton" parent="Options/Audio/Master"]
visible = false
margin_left = 410.0
margin_right = 486.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
pressed = true

[node name="Music_label" type="Label" parent="Options/Audio"]
margin_top = 268.0
margin_right = 486.0
margin_bottom = 287.0
custom_fonts/font = ExtResource( 2 )
text = "Music"
align = 1
valign = 1

[node name="Music" type="HBoxContainer" parent="Options/Audio"]
margin_top = 291.0
margin_right = 486.0
margin_bottom = 307.0

[node name="Music_slider" type="HSlider" parent="Options/Audio/Music"]
margin_right = 486.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 20.0

[node name="Music_on" type="CheckButton" parent="Options/Audio/Music"]
visible = false
margin_left = 434.0
margin_right = 510.0
margin_bottom = 40.0
pressed = true

[node name="SFX2" type="Label" parent="Options/Audio"]
margin_top = 311.0
margin_right = 486.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"
align = 1
valign = 1

[node name="SFX" type="HBoxContainer" parent="Options/Audio"]
margin_top = 334.0
margin_right = 486.0
margin_bottom = 350.0

[node name="SFX_slider" type="HSlider" parent="Options/Audio/SFX"]
margin_right = 486.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 20.0

[node name="SFX_on" type="CheckButton" parent="Options/Audio/SFX"]
visible = false
margin_left = 434.0
margin_right = 510.0
margin_bottom = 40.0
pressed = true

[node name="SAVE" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = -20.0
margin_right = 21.5
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Options/Graphics/Fullscreen" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Options/Graphics/VSync" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="Options/Audio/Master/Master_slider" to="." method="_on_Master_slider_value_changed"]
[connection signal="toggled" from="Options/Audio/Master/Master_on" to="." method="_on_Master_on_toggled"]
[connection signal="value_changed" from="Options/Audio/Music/Music_slider" to="." method="_on_Music_slider_value_changed"]
[connection signal="toggled" from="Options/Audio/Music/Music_on" to="." method="_on_Music_on_toggled"]
[connection signal="value_changed" from="Options/Audio/SFX/SFX_slider" to="." method="_on_SFX_slider_value_changed"]
[connection signal="toggled" from="Options/Audio/SFX/SFX_on" to="." method="_on_SFX_on_toggled"]
[connection signal="pressed" from="SAVE" to="." method="_on_SAVE_pressed"]
